# hddm

./: .bumpversion.cfg  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGES.rst  CONTRIBUTORS.rst  Dockerfile  INSTALL.rst  LICENSE  MANIFEST  MANIFEST.in  MPLTraits.py  Makefile  README.rst  TODO  bld.bat  brownian.py  builddpkg  clean_build.sh  ddm_likelihoods.py  generate.py  hddm.py  hddm_test.py  hddm_theta.py  install_osx.sh  lba64.pyx  make_lba.sh  meta.yaml  readthedocs_preinstall.sh  requirements.txt  setup.py  setup_cython.py  stdeb.cfg  wfpt64.pyx
HDDM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
conda/: bld.bat  meta.yaml
docs/: COPYRIGHT  _config.yml  abstract.rst  allinone.rst  conclusions.rst  conf.py  create_model_plot.py  gm_dists.tex  howto.rst  index.rst  intro.rst  make.bat  make.py  manual.rst  requirements.txt  tutorial.rst  tutorial_config_difficulty.rst  tutorial_config_subjects.rst  tutorial_python.rst
docs_old/: Makefile
examples/: RatcliffFrank.db  RatcliffFrank.txt  RatcliffFrankTer.txt
graveyard/: basic_simulator copy.py  basic_simulator_old.py  boundary_functions.py  drift_functions.py
hddm/: MPLTraits.py  MPLTraits_qt.py  __init__.py  brownian.py  demo.py  diag.py  (+27 more)
src/fast-dm/: AUTHORS  ChangeLog  EZ-diff.c  MANUAL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  cdf.c  config.status  configure  configure.ac  construct-samples.c  container.c  data.out  dataset.c  experiment.c  experiment.ctl  fast-dm.h  file.c  jvrandom.h  main.c  method-ks.c  pde.c  phi.c  simplex2.c  win32dir.h  xmalloc.c
(+380 files in other folders)
